--- a/Front/src/app/main/towns/towns-home/towns-home.component.html
+++ b/Front/src/app/main/towns/towns-home/towns-home.component.html
@@ -3,23 +3,23 @@
   {{'BACKBTN' | oTranslate}}
 </button>
 
-  <o-form #form fxLayout="column" show-header="no">
+  <o-form #form fxFill fxLayout="column" show-header="no" horizontal-scroll="false" virtual-scroll="no">
 
     <h2 class="towns-home">{{'CHOOSEDESTINATIONMSSG' | oTranslate}}</h2>
     
         <div class="filter-style" fxLayout="column">
           <div fxLayout="row wrap" fxLayout="32px" class="buttons-container">
               <!-- Combo para Provincias -->
-              <!-- <o-combo attr=province_name service="provinces" entity="province" keys="id_province"
+              <o-combo #provinceCombo attr=province_name service="provinces" entity="province" keys="id_province"
                       columns="province_name;id_province" value-column="province_name" visible-columns="province_name"
-                      read-only="no" class="input-combo" fxFlex="35%" sort="ASC" searchable="true"
+                      read-only="no" class="input-combo" fxFlex="35%" sort="ASC" searchable="true" query-method="query"
                       placeholder="province_name" label-visible="false">
-              </o-combo> -->
+              </o-combo>
               <!-- Combo para Ciudades -->
-              <o-combo attr="town_name" service="towns" entity="town" keys="id_town"
-                            columns="town_name;id_town" visible-columns="town_name" value-column="town_name"
-                            class="input-combo" fxFlex="75%" sort="ASC" searchable="true"
-                            placeholder="town_name" label-visible="false">
+              <o-combo #townCombo attr="town_name" service="towns" entity="town" keys="id_town"
+                            columns="town_name;id_town;id_province" visible-columns="town_name" value-column="town_name"
+                            class="input-combo" fxFlex="75%" sort="ASC" searchable="true" query-method="query"
+                            placeholder="town_name" label-visible="false" [query-on-event]="provinceCombo.onValueChange" parent-keys="id_province:provinceCombo[id_province]">
               </o-combo>
               <!-- Botones del filtro -->
               <div class="buttons-container">
@@ -36,17 +36,20 @@
               </o-filter-builder>
           </div>
         </div>
-        <o-grid #grid columns="id_town;town_name;province_name" quick-filter="no"
-        service="towns" entity="town" keys="id_town" [cols]="5" grid-item-height="2:3"
-        show-page-size="false" page-size-options="5;10;20" refresh-button="false" pagination-controls="true"
-        sortable-columns="town_name" sort-column="town_name" gutter-size="10px" [ngStyle]="{'height':'600px'}" >
+
+        <o-grid #grid columns="id_town;town_name;province_name" quick-filter="no" fixed-header="no"
+        service="towns" entity="town" keys="id_town" [cols]="5" grid-item-height="2:3" controls="false"
+        refresh-button="false" show-page-size="true" page-size-options="10;15;20" pagination-controls="true" show-buttons-text="no"
+        sortable-columns="town_name" sort-column="town_name" gutter-size="10px" [ngStyle]="{'height':'auto'}" >
 
         <div class="grid-container">
             <o-grid-item class="townCard" *ngFor="let list of grid.dataArray">
                 <o-column class="container-item">
-                    <a [routerLink]="['/main/towns', list.id_town]">
-                        <img src="{{ getImagePath(list.town_name) }}" alt="{{ list.town_name }}" class="town-image">
-                    </a>
+                    <div>
+                        <a [routerLink]="['/main/towns', list.id_town]">
+                            <img src="{{ getImagePath(list.town_name) }}" alt="{{ list.town_name }}" class="town-image">
+                        </a>
+                    </div>
                     <div class="town-data">     
                         <div class="town-name">{{ list.town_name }}</div>
                         <div class="province-name">{{ list.province_name }}</div>
