--- a/Front/src/app/main/travelers/travelers-home/travelers-home.component.html
+++ b/Front/src/app/main/travelers/travelers-home/travelers-home.component.html
@@ -15,8 +15,8 @@
                     <o-text-input attr="id_client" oHidden></o-text-input>
                     <o-text-input attr="surname" label="SURNAME" fxFlex="80" required="yes"
                         max-length="30"></o-text-input>
-                    <o-textarea-input attr="short_desc" label="DESCRIPTION"
-                        placeholder="{{ 'ONESENTENCE' | oTranslate }}" fxFlex="80" max-length="250"></o-textarea-input>
+                    <o-textarea-input attr="short_desc" label="SHORTDESC"
+                        placeholder="{{ 'SHORDESC' | oTranslate }}" fxFlex="80" max-length="250"></o-textarea-input>
                 </o-column>
                 <o-column title="ACTIVITIES" layout-align="start stretch" fxFlex="80" icon="favorite">
 
