--- a/Front/src/app/main/travelers/travelers-home/travelers-home.component.css
+++ b/Front/src/app/main/travelers/travelers-home/travelers-home.component.css
@@ -44,32 +44,45 @@ mat-chip:hover {
 
 .container {
     width: 900px;
-    height: auto;
     display: flex;
-    flex-direction: column;
-    margin: 10px;
- 
+    flex-direction: column-reverse;
+    margin-left: 10px;   
+}
+
+.title{
+    display: flex;
+    color: rgb(45, 13, 120); 
+    text-transform: uppercase;
+    font-weight: bold;
+    letter-spacing: 1px;
+    margin-left: 10px;
+    
 }
 
 .row {
     width: 900px;
     height: 60px;
     display: flex;
-    flex-direction: row;
-}
-
-.itemrow1, .itemrow2, .itemrow3, .itemrow4, .itemrow5{
-    padding: 10px;
+    flex-direction: row;  
 }
 
 .itemrow1 {
-    width: 500px;
+    width: 550px;
     height: 60px;
     color: white;
     font-size: small;
     background-color: rgb(45, 13, 120);
     overflow: hidden;
-    
+}
+
+.nm, .date, .reserv {
+    padding: 5px;
+}
+
+.msg {
+    padding: 0 5px;
+    line-height: 2;
+    color:white;
 }
 
 .nameT {
@@ -77,66 +90,76 @@ mat-chip:hover {
     letter-spacing: 1px;
     font-weight: bold;
     font-size: 15px;
-    margin-bottom: 8px;
+    
+
 }
 
+
 .itemrow2 {
-    width: 150px;
+    width: 170px;
     height: 60px;
     color: white;
     background-color: rgb(45, 13, 120);
     text-align: right;
     font-size: small;
-    
+
 }
 
 .dateFormat {
     letter-spacing: 1px;
     font-weight: bold;
-    font-size: 15px;
+    font-size: 16px;
     text-align: right;
+    padding: 0 5px;
+    
 }
 
 .itemrow3 {
-    width: 120px;
+    width: 150px;
     height: 60px;
     color: rgb(45, 13, 120);
     background-color: rgb(187, 164, 207);
     text-align: center;
     font-size: small;
-    
+
 }
 
-.status{
+.status {
     justify-content: center;
     align-items: center;
     text-align: center;
     font-weight: bold;
     font-size: 15px;
     letter-spacing: 0.5px;
+   
 }
+
 .itemrow4 {
     width: 70px;
     height: 60px;
     color: rgb(45, 13, 120);
-    background-color:rgb(209, 187, 220);
+    background-color: rgb(209, 187, 220);
     display: flex;
-  
-    
+    justify-content: center;
+
+
+
+
 }
-.showMsg{
+
+.showMsg {
     display: flex;
     justify-content: center;
     align-items: center;
-    text-align: center;
+   
+
+    .eye {
+        width: 30px;
+
+    }
 }
 
-img{
-    width: 30px; 
-    align-self: center;
-    
-    
-   }
+
 
 .itemrow5 {
     width: 140px;
@@ -151,15 +174,24 @@ img{
     display: flex;
 }
 
-.showProf{
+.showProf {
     display: flex;
     text-align: center;
-    align-items: center ;
+    align-items: center;
     justify-content: center;
     font-size: 13px;
     font-weight: bold;
     letter-spacing: 2px;
     text-transform: uppercase;
+    
+
+}
+
+.res {
+    font-size: small;
+    text-transform: capitalize;
+    font-weight: bold;
+    
 
 }
 
