--- a/Front/src/app/main/travelers/travelers-reservation/travelers-reservation-detail/travelers-reservation-detail.component.css
+++ b/Front/src/app/main/travelers/travelers-reservation/travelers-reservation-detail/travelers-reservation-detail.component.css
@@ -2,7 +2,6 @@
     width: 500px;
     height: 650px;
     background: url(../../../../../assets/images/fondo_dial.png);
-    /*definimos fondo cuando ajustemos las medidas del dialog*/
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -39,6 +38,7 @@
     .boxSc-date {
         display: flex;
         justify-content: space-between;
+        margin-bottom: 20px;
 
         .item-date {
             text-align: right;
@@ -65,7 +65,6 @@
         border: 3px solid white;
         padding: 15px;
         margin-bottom: 20px;
-        margin-top: 20px;
         text-align: right;
         align-self: flex-end;
 
@@ -74,11 +73,13 @@
             text-transform: uppercase;
             font-weight: bold;
             color: rgb(45, 13, 120);
+            text-align: right;
         }
 
         .msgT {
             font-size: small;
             color: rgb(45, 13, 120);
+            text-align: right;
         }
     }
 
@@ -125,28 +126,31 @@
             margin: 10px 0 10px 0;
         }
     
-        .boxInfo {
-            font-size: medium;
-            color: white;
-            align-self: center;
-            margin: 0px 0 10px 0;
-           
-        }
+     
     }
 
     
-    .buttons {
-        text-align: center;
-        margin-top: 11px;
 
-        .acc-rej {
-            font-size: 15px;
-            color: white;
-            margin: 10px 0 10px 0; 
-        }
-        o-button{
-            margin: 0 10px;
-        }
+}
+
+.boxInfo {
+    font-size: medium;
+    color: white;
+    align-self: center;
+    margin: 0px 0 10px 0;
+   
+}
+
+.buttons {
+    text-align: center;
+    margin-top: 11px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+
+  
+    o-button{
+        margin: 0 10px;    
     }
 }
 
@@ -158,4 +162,9 @@ o-textarea-input {
     resize: none;
 
 }
-
+.cancel {
+    font-size: 15px;
+    color: white;
+    margin: 10px 0 10px 0; 
+    text-align: center;
+}
