--- a/Front/src/app/main/travelers/travelers-reservation/travelers-reservation-received-detail/travelers-reservation-received-detail.component.html
+++ b/Front/src/app/main/travelers/travelers-reservation/travelers-reservation-received-detail/travelers-reservation-received-detail.component.html
@@ -1,3 +1,5 @@
+
+
 <div class="container">
     <o-form #form service="users" entity="reservation" keys="id_reservation" editable-detail="true" show-header="no"
         show-header-navigation="no" layout-direction="column" (onDataLoaded)="ngOnInit()">
@@ -7,31 +9,32 @@
 
         <div class="boxes">
 
-        <div class="boxSc-date">
-            <div class="item-scape" (click)="closeDialog()"><span class="material-symbols-outlined">cancel</span>
-            </div>
-            <div clas="item-date">
-                <div class="date1">{{'Reservation Date' | oTranslate}}</div>
-                <div class="date2">{{reservation_date | date: 'dd/MM/yyyy'}}</div>
-            </div>
-        </div>
-        
-            <div class="boxName-msgT">
-                <div class="nameT">{{name_traveler}} {{surname_traveler}}</div>
-                <div class="msgT">{{message}}</div>
+            <div class="boxSc-date">
+                <div class="item-scape" (click)="closeDialog()"><span class="material-symbols-outlined">cancel</span>
+                </div>
+                <div clas="item-date">
+                    <div class="date1">{{'Reservation Date' | oTranslate}}</div>
+                    <div class="date2">{{reservation_date | date: 'dd/MM/yyyy'}}</div>
+                </div>
             </div>
 
-            <div *ngIf="id_status == 1" class="boxName-msgH">
-                <div  class="nameH">{{name_host}} {{'YOUTAG' | oTranslate}}</div><span></span>
-                <div  class="msgH">{{message_answer}}</div>
+            <div class="boxName-msgH">
+                <div class="nameH">{{name_traveler}} {{surname_traveler}}</div>
+                <div class="msgH">{{message}}</div>
+            </div>
+
+            <div *ngIf="id_status == 1" class="boxName-msgT">
+                <div class="nameT">{{name_host}} {{'YOUTAG' | oTranslate}}</div><span></span>
+                <div class="msgT">{{message_answer}}</div>
             </div>
 
             <o-textarea-input *ngIf="id_status == 3" attr="message_answer"
-
-                label= "{{'LABEL_INPUT_RESP' | oTranslate}} {{name_traveler}}" fxFlex="70" max-length="100"></o-textarea-input>
+                label="{{'LABEL_INPUT_RESP' | oTranslate}} {{name_traveler}}" fxFlex="70"
+                max-length="100"></o-textarea-input>
 
             <div class="buttons" *ngIf="id_status == 3">
-                <div class="acc-rej">{{'ACCEPTVISITOF?' | oTranslate}} {{name_traveler}}? <br>{{'ACCEPTVISITOF2?' | oTranslate}}</div>
+                <div class="acc-rej">{{'ACCEPTVISITOF?' | oTranslate}} {{name_traveler}}? <br>{{'ACCEPTVISITOF2?' |
+                    oTranslate}}</div>
                 <o-button class="reject" type="RAISED" label="REJECT" layout-padding color="primary"
                     (onClick)="rejectReservation(id_reservation)"></o-button>
                 <o-button class="accept" type="RAISED" label="ACCEPT" layout-padding color="primary"
@@ -39,19 +42,23 @@
             </div>
 
             <o-textarea-input *ngIf="id_status == 1" attr="message_cancellation"
-                label="Cancela la reserva de {{name_traveler}}" fxFlex="70" max-length="200"></o-textarea-input>
+                label="{{'CANCEL_RESP' | oTranslate}}" fxFlex="70" max-length="200" ></o-textarea-input>
 
             <div class="buttons" *ngIf="id_status == 1">
-                <div class="acc-rej">{{'ACCEPTVISITOF?' | oTranslate}} {{name_traveler}}? <br>{{'ACCEPTVISITOF2?' | oTranslate}}</div>
+                <div class="acc-rej">{{'ACCEPTVISITOF?' | oTranslate}} {{name_traveler}}? <br>{{'ACCEPTVISITOF2?' |
+                    oTranslate}}</div>
                 <o-button class="reject" type="RAISED" label="CANCEL" layout-padding color="accent"
                     (onClick)="cancelReservation(id_reservation)"></o-button>
             </div>
 
-            <div class="boxInfo">
-                <div *ngIf="id_status == 1"> {{ 'ACCEPT_RES1' | oTranslate }} {{name_traveler}} {{ 'ACCEPT_RES2' | oTranslate }}
+            <div class="backgroundBox" *ngIf="!(id_status == 3)">
+                <div class="box-autoResp" >
+                    <div *ngIf="id_status == 1"> {{ 'ACCEPT_RES1' | oTranslate }} {{name_traveler}} {{ 'ACCEPT_RES2' |
+                        oTranslate }}
+                    </div>
+                    <div *ngIf="id_status == 2"> {{'You rejected the reservation' | oTranslate}}</div>
+                    <div *ngIf="id_status == 4"> {{'You rejected the reservation' | oTranslate}}</div>
                 </div>
-                <div *ngIf="id_status == 2"> {{'You rejected the reservation' | oTranslate}}</div>
-                <div *ngIf="id_status == 4"> {{'You rejected the reservation' | oTranslate}}</div>
             </div>
         </div>
     </o-form>
