--- a/Front/src/app/main/travelers/travelers-home/travelers-home.component.html
+++ b/Front/src/app/main/travelers/travelers-home/travelers-home.component.html
@@ -9,7 +9,7 @@
                 (onUpdate)="saveActivitiesInDataBase()">
 
                 <o-column title="PROFILE_DATA" layout-align="start stretch" fxFlex="80" icon="account_circle">
-                    <o-image attr="avatar" label="AVATAR" fxFlex="80" width="350px"
+                    <o-image attr="avatar" label="AVATAR" fxFlex="80" width="350px" laber-visible="no"
                         empty-image="assets/images/no-image.png" sql-type="OTHERS"></o-image>
                     <o-text-input attr="name" label="NAME" fxFlex="80" required="yes" max-length="20"></o-text-input>
                     <o-text-input attr="id_client" oHidden></o-text-input>
