--- a/Front/src/app/main/travelers/travelers-detail/travelers-detail.component.css
+++ b/Front/src/app/main/travelers/travelers-detail/travelers-detail.component.css
@@ -1,94 +1,87 @@
-.container {
+.box {
     display: flex;
-    flex-direction: column;
     justify-content: center;
     align-items: center;
-    /* height: 80vh; */
-   
+    margin: auto;
+    padding: 10px;
+    background-color: white;
+    border: 1px solid #ddd; 
+    border-radius: 20px;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 3); /* Sombra para dar efecto elevado */
+    overflow: hidden;
+    transition: box-shadow 0.3s;
+    width: 1100px; /* Ancho fijo */
+    height: 650px; /* Altura fija */
 }
 
-.title {
-    width: 70%;
-    height: auto;
-    padding: 10px 50px;
-    background-color: #341777;
-    border: 1px solid #341777;
-    position: relative;
+.shortDesc {
+    text-align: center;
+    margin: auto;
+    padding: 0 10px;
+    font-size: 18px;
+    color: #555;
+    font-style: italic;
+}
 
+.profile-content {
+    display: flex;
+    flex-wrap: wrap;
 }
 
 .hostName {
-    font-family: 'Patua One', sans-serif;
-    font-size: 40px;
-    margin: 20px 20px 0px 20px;
-    color: white;
+    font-size: 35px;
+    font-weight: bold;
+    color: #341777;
+    margin-top: 5px;
 }
 
 .town {
-    font-family: 'Playfair Display', sans-serif;
-    font-size: 18px;
-    /* margin: 5px 20px 20px 20px; */
-}
-
-.shortDesc{
-    font-family: 'Rasa', serif;
-    font-style: italic;
-    font-size: 25px;
-}
-
-.longDesc{
-    font-family: 'Rasa', serif;
+    margin-top: 2px;
     font-size: 20px;
+    text-transform: uppercase;
+    color: #626262;
+    margin-bottom: 20px;
 }
 
-.box {
-    width: 70%;
+.longDesc {
+    font-size: 16px;
+    margin-bottom: 10px;
+    text-align: justify;
+}
+
+.activities-chip-list {
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    flex-wrap: wrap;
+    list-style: none;
+    overflow: hidden;
+    width: auto;
+}
+
+.activitiesChip {
+    font-size: 14px;
     height: auto;
-    padding: 50px;
-    background-color: white;
-    /*  border: 2px solid transparent;
-    box-shadow: 0px 0px 3px #56535b; */
-    position: relative;
-    border: 1px solid #341777;
+    line-height: normal;
+    padding: 5px 10px;
+    pointer-events: none;
+    background-color: rgb(226, 212, 252);
+    margin: 1px; 
 }
 
-.tape {
-    position: absolute;
-}
-
-.mat-chip {
-    font-size: 1em; 
-    height: 0px; /* Altura fija para todas las chips */
-    line-height: 5px; /* Alineación vertical del texto dentro de la chip */
-    padding: 0 10px; /* Padding horizontal para mantener el contenido centrado */
-    margin: 0;
-    pointer-events: none; /* Desactiva el efecto hover */
-    background-color: rgb(210, 190, 250);
-}
-
-
-mat-chip:hover {
-background-color: inherit; 
-}
-
-.mat-chip-list {
-display: flex;
-justify-content: center;
-align-items: center; 
-list-style: none;
-padding: 0;
-margin: 0 0 20px; /* Añadir margen inferior */
-width: 100%; 
-box-sizing: border-box;
+.activitiesChip:hover {
+    background-color: inherit; 
 }
 
 .button-contact {
+    font-size: 16px;
     display: flex;
     justify-content: center;
-    width: 100%;
-    margin-top: 20px;
+    align-items: center;
+    text-align: center; /* Centra el botón en la tarjeta */
+    margin-top: 35px;
+    margin-bottom: 20px;
 }
-
 
 /* .tape-left {
     top: -50px;
