--- a/Front/src/app/main/travelers/travelers-detail/travelers-detail.component.html
+++ b/Front/src/app/main/travelers/travelers-detail/travelers-detail.component.html
@@ -3,41 +3,51 @@
   <mat-icon>arrow_back_ios_new</mat-icon>
   {{'BACKBTN' | oTranslate}}
 </button>
-<div class="container">
-  <div class="title">
-    <p class="hostName">{{nameInput.getValue()}} {{surnameInput.getValue()}}</p>
-  </div>
+
   <div class="box">
-    <o-form #form service="users" entity="client" keys="id_client" editable-detail="true" show-header="no"
+    <o-form #form service="users" entity="client" keys="id_client" show-header="no"
       show-header-navigation="no" layout-direction="column" (onDataLoaded)="onLoad()">
       <o-text-input attr="id_client" sql-type="INTEGER" oHidden></o-text-input>
       <o-text-input attr="id_town" sql-type="INTEGER" oHidden></o-text-input>
+
       <o-column>
         <div fxLayout="row" fxLayoutGap="25px">
           <o-column fxFlex="40" fxFlex.md="100" class="vertical-margin-10">
             <o-image attr="avatar" label="AVATAR" fxFlex="100" empty-image="assets/images/no-image.png"
               sql-type="OTHERS" show-controls="false" read-only="yes" height="100%"></o-image>
+            <!-- <img *ngIf="avatar" class="avatar-image" src="data:image/png;base64,{{ avatar.getValue() }}"> -->
+            <!-- <div class="img-container">
+              <img src="{{ avatar ? 'data:image/png;base64,' + avatar.getValue() : 'assets/images/no-image.png' }}" alt="Avatar">
+            </div> -->
+          
+            <!-- Short Desc -->
+            <div class="shortDesc-container">
+              <o-textarea-input attr="short_desc" label="SHORT_DESC" fxFlex="40" class="form-field" read-only="yes"
+                label-visible="false" #shortDescInput oHidden></o-textarea-input>
+              <o-row class="shortDesc">"{{ shortDescInput.getValue() }}"</o-row>
+            </div>
           </o-column>
+
           <o-column fxFlex="60" fxFlex.md="100" class="vertical-margin-10">
+            <!-- Nombre y Apellidos -->
             <o-text-input attr="name" label="NAME" fxFlex="100" class="form-field" read-only="yes" label-visible="false"
               #nameInput oHidden></o-text-input>
             <o-text-input attr="surname" label="SURNAME" fxFlex="100" class="form-field" read-only="yes"
               label-visible="false" #surnameInput oHidden></o-text-input>
+            <o-row class="hostName">{{nameInput.getValue()}} {{surnameInput.getValue()}}</o-row>
+            <!-- Ciudad -->
             <o-text-input #town attr="town_name" label="TOWN" fxFlex="100" class="form-field" read-only="yes"
               label-visible="false" #townNameInput oHidden></o-text-input>
-            <o-textarea-input attr="short_desc" label="SHORT_DESC" fxFlex="100" class="form-field" read-only="yes"
-              label-visible="false" #shortDescInput oHidden></o-textarea-input>
-            <o-textarea-input attr="description" label="DESCRIPTION" fxFlex="150" class="form-field" read-only="yes"
+            <o-row class="town"><mat-icon>location_on</mat-icon>{{townNameInput.getValue()}}</o-row>
+            <!-- Descripción -->
+            <o-textarea-input attr="description" label="DESCRIPTION" fxFlex="95" class="form-field" read-only="yes"
               label-visible="false" #longDescInput oHidden></o-textarea-input>
-            <o-row class="shortDesc">"{{shortDescInput.getValue()}}"</o-row>
-            <br>
-            <o-column title="ABOUTME" layout-align="start stretch" fxFlex="100" icon="account_circle">
+            <o-column class="aboutme" title="ABOUTME" layout-align="start stretch" fxFlex="95">
               <o-row class="longDesc">{{longDescInput.getValue()}}</o-row>
-              <br>
-              <o-row class="town"><mat-icon>location_on</mat-icon>{{townNameInput.getValue()}}</o-row>
-              <br>
-
-              <mat-chip-list>
+            </o-column>
+            <!-- Actividades -->  
+            <o-column class="activities" title="ACTIVITIES" layout-align="start stretch" fxFlex="95">
+              <mat-chip-list class="activities-chip-list">
                 <mat-chip class="activitiesChip" *ngFor="let activity of arrayActivitiesClient" [disabled]="false"
                   color="primary">
                   {{ activity }}
@@ -49,7 +59,7 @@
       </o-column>
 
       <div class="button-contact">
-        <button mat-raised-button color="accent" fxFlex="40" (click)="openReservation()">{{ 'CONTACT' | oTranslate
+        <button mat-raised-button color="accent" fxFlex="35" (click)="openReservation()">{{ 'CONTACTMSJ' | oTranslate
           }} {{ nameInput.getValue() }}</button>
       </div>
 
@@ -61,35 +71,3 @@
       <img src="../../../assets/images/tape2.png" alt="">
     </div> -->
   </div>
-</div>
-
-
-<!--
-   <o-grid #grid columns="user_;id_client;name;surname;short_desc;avatar;activity_name" quick-filter-columns="name;surname;activity_name"
-        service="users" entity="host" keys="id" parent-keys="id_town" [cols]="3" show-page-size="false"
-        page-size-options="4;8;16" grid-item-height="3:4" refresh-button="false" pagination-controls="false"
-        gutter-size="20px" [ngStyle]="{'height':'600px'}" (onClick)="goToHostDetail($event)" (onDataLoaded)="onLoad()">
-
-        <div class="container">
-        <o-grid-item class="hostCard" *ngFor="let list of grid.dataArray">
-            <o-column class="container-item">
-                <div>
-                    <o-image class="image1" attr="image1" data="{{ list.avatar }}" read-only="true"
-                        show-controls="false">
-                    </o-image>
-                </div>
-                <div class="name-surname">
-                    <h2>{{ list.name + ' ' + list.surname }}</h2>
-                </div>
-                <div class="short_desc">
-                    <span>{{ list.short_desc }}</span>
-                </div>
-                 <mat-chip-list>
-                    <mat-chip class="activitiesChip" *ngFor="let activity of arrayActivitiesClient" [disabled]="false" color="primary">
-                      {{ activity }}
-                    </mat-chip>
-                  </mat-chip-list>
-                  <p>{{ arrayActivitiesClient }}</p>
-              <p>Hola</p> 
-            </o-column>
--->
