--- a/Front/src/app/main/travelers/travelers-home/travelers-home.component.html
+++ b/Front/src/app/main/travelers/travelers-home/travelers-home.component.html
@@ -91,6 +91,8 @@
                     <o-combo attr="id_town" fxFlex="80" label="TOWN" service="towns" entity="town" keys="id_town"
                         columns="town_name;id_town" visible-columns="town_name" value-column="id_town"
                         class="input-padding" required="yes" sort="ASC" searchable="true"></o-combo>
+                    <o-row class="mailciudades">{{ 'CITIESMAIL' | oTranslate }}</o-row>
+                    <br>
                     <o-text-input attr="phonenumber" label="PHONENUMBER" fxFlex="80" required="yes"
                         max-length="15"></o-text-input>
                     <o-email-input attr="email" label="EMAILCONT" placeholder="example@example.com" fxFlex="80"
