--- a/Front/src/app/main/reservations/reservation-home/reservation-home.component.html
+++ b/Front/src/app/main/reservations/reservation-home/reservation-home.component.html
@@ -13,10 +13,10 @@
 
 
             <o-grid #gridReservationReceived attr="reservationReceived" service="users" entity="reservationReceived"
-                columns="id_reservation;id_client_traveler;id_client_host;name_traveler;surname_traveler;name_host;surname_host;message;status_name;reservation_date"
+                columns="read_host;id_reservation;id_client_traveler;id_client_host;name_traveler;surname_traveler;name_host;surname_host;message;status_name;reservation_date"
                 query-rows="8" refresh-button="no" quick-filter="true"
-                quick-filter-columns="name_traveler;surname_traveler;message;status_name"
-                visible-columns="name_host;message;status_name;reservation_date" [cols]="1" grid-item-height="60px"
+                quick-filter-columns="name_traveler;surname_traveler;message;status_name;read_host"
+                visible-columns="name_host;message;status_name;reservation_date;read_host" [cols]="1" grid-item-height="60px"
                 gutter-size="6px" show-footer="no">
 
                 <o-grid-item *ngFor="let list of gridReservationReceived.dataArray">
@@ -48,7 +48,11 @@
                                 <div class="status" *ngIf="list.status_name==='anuladaportrav'">{{ 'CANCELED' |
                                     oTranslate }}</div>
                             </div>
-
+                            <div class="itemrow5">
+                                <div class="readStatus">{{'Estate' | oTranslate}}</div>
+                                <div class="read" *ngIf="list.read_host === true">{{ 'READ' | oTranslate }}</div>
+                                <div class="read" *ngIf="list.read_host === false">{{ 'UNREAD' | oTranslate }}</div>
+                            </div>
                             <div class="itemrow4">
                                 <div class="showMsg" (click)="verReservaRec(list.id_reservation)">
                                     <img src="../../../../assets/icons/eyeIcon.png" alt="icon">
@@ -65,9 +69,9 @@
             </o-grid>
 
             <o-grid #gridReservationSent attr="reservationSent" service="users" entity="reservationSent"
-                columns="id_reservation;name_traveler;id_client_traveler;id_client_host;surname_traveler;name_host;surname_host;message;status_name;reservation_date"
+                columns="read_traveler;id_reservation;name_traveler;id_client_traveler;id_client_host;surname_traveler;name_host;surname_host;message;status_name;reservation_date"
                 query-rows="8" refresh-button="no" quick-filter="true"
-                visible-columns="name_host;message;status_name;reservation_date" [cols]="1" grid-item-height="60px"
+                visible-columns="name_host;message;status_name;reservation_date;read_traveler" [cols]="1" grid-item-height="60px"
                 gutter-size="6px" show-footer="no">
 
                 <o-grid-item *ngFor="let list of gridReservationSent.dataArray">
@@ -100,7 +104,11 @@
                                 <div class="status" *ngIf="list.status_name==='anuladaportrav'">{{ 'CANCELED' |
                                     oTranslate }}</div>
                             </div>
-
+                            <div class="itemrow5">
+                                <div class="readStatus">{{'Estate' | oTranslate}}</div>
+                                <div class="read" *ngIf="list.read_traveler === true">{{ 'READ' | oTranslate }}</div>
+                                <div class="read" *ngIf="list.read_traveler === false">{{ 'UNREAD' | oTranslate }}</div>
+                            </div>
                             <div class="itemrow4">
                                 <div class="showMsg" (click)="verReservaSent(list.id_reservation)">
                                     <img src="../../../../assets/icons/eyeIcon.png" alt="icon">
