--- a/Front/src/app/main/travelers/travelers-home/travelers-home.component.html
+++ b/Front/src/app/main/travelers/travelers-home/travelers-home.component.html
@@ -8,75 +8,93 @@
                 header-actions="U" #oDetailForm keys="user_" keys-sql-types="VARCHAR" show-header-navigation="yes"
                 (onUpdate)="saveActivitiesInDataBase()">
 
-                <o-column title="PROFILE_DATA" layout-align="start stretch" fxFlex="80" icon="account_circle">
-                    <o-image attr="avatar" label="AVATAR" fxFlex="80" width="350px" laber-visible="no"
-                        empty-image="assets/images/no-image.png" sql-type="OTHERS"></o-image>
-                    <o-text-input attr="name" label="NAME" fxFlex="80" required="yes" max-length="20"></o-text-input>
-                    <o-text-input attr="id_client" oHidden></o-text-input>
-                    <o-text-input attr="surname" label="SURNAME" fxFlex="80" required="yes"
-                        max-length="30"></o-text-input>
-                    <o-textarea-input attr="short_desc" label="SHORTDESC"
-                        placeholder="{{ 'ONESENTENCE' | oTranslate }}" fxFlex="80" max-length="100"></o-textarea-input>
-                </o-column>
-                <o-column title="ACTIVITIES" layout-align="start stretch" fxFlex="80" icon="favorite">
+            <o-column>
+                <div fxLayout="row" fxLayoutGap="25px">
+                    <!-- Columna Izquierda: Foto + Datos Perfil-->
+                    <o-column fxFlex="35" fxFlex.md="100" class="vertical-margin-10">
+                        <o-column class="profile-photo" title="PROFILE_PHOTO" layout-align="start stretch" fxFlex="95" icon="photo">
+                            <o-image attr="avatar" label="AVATAR" fxFlex="100" width="400px" labeL-visible="no"
+                                empty-image="assets/images/no-image.png" sql-type="OTHERS" height="100%"></o-image>
+                            </o-column>
+                        <o-column class="register-data" title="REGISTER_DATA" layout-align="start stretch" fxFlex="95" icon="assignment">
+                            <o-text-input attr="user_" label="USER" fxFlex="100" enabled="no"></o-text-input>
+                            <div class="row-pass">
+                                <!-- Campo de entrada de contraseña -->
+                                <o-password-input attr="password" fxFlex="100" required="yes" label="PASSWORD"
+                                    show-password-button="yes" [validators]="validatorsArray" (input)="onPasswordInput()"
+                                    width="160px" class="form-field">
+                                    <!-- Validador para el tamaño de la contraseña -->
+                                    <o-validator [error-name]="'passwordNotSize'" [error-text]="'ERROR_PASS'"></o-validator>
+                                </o-password-input>
+                            </div>
+                            <div class="row-pass">
+                                <!-- Campo de entrada de confirmación de contraseña -->
+                                <o-password-input attr="passwordConfirm" fxFlex="100" *ngIf="isPasswordModified"
+                                    label="{{ 'Confirm password' | oTranslate }}" show-password-button="yes"
+                                    [validators]="validatorsArray" width="160px" class="form-field">
+                                    <!-- Validador para comprobar que las contraseñas coinciden -->
+                                    <o-validator [error-name]="'passwordNotMatched'" [error-text]="'ERROR_MATCH'"></o-validator>
+                                </o-password-input>
+                            </div>
+                        </o-column>
+                    </o-column>   
 
-                    <mat-chip-list fxFlex="80">
-                        <mat-chip class="activitiesChip" *ngFor="let activity of arrayActivitiesClient"
-                            [disabled]="false" color="primary">
-                            {{ activity }}
-                        </mat-chip>
-                    </mat-chip-list>
-
-                    <o-column-collapsible title="ACTSELECT" layout-align="start stretch" fxFlex="80" expanded="no">
-                        <o-grid class="activitiesGrid" #activitiesB attr="activitiesB" service="activities"
-                            entity="activity" keys="id_activity" columns="activity_name;id_activity" orderable="true"
-                            show-page-size="no" quick-filter="false" cols="6" sortable-columns="activity_name"
-                            gutter-size="5px" detail-mode="none" (onDataLoaded)="onLoad()" pagination-controls="false"
-                            controls="false" grid-item-height="60" show-footer="no">
-
-                            <o-grid-item *ngFor="let item of activitiesB.dataArray" show-page-size="false">
-
-                                <div fxLayout="column" fxLayoutAlign="space-evenly center">
-                                    <o-button class="activitiesButton"
-                                        *ngIf="arrayActivitiesClient.includes(item.activity_name)" type="STROKED"
-                                        label="{{ item.activity_name }}" layout-padding color="primary"
-                                        (onClick)="removeActivityFn(item.activity_name,item.id_activity)"></o-button>
-                                    <o-button class="activitiesButton"
-                                        *ngIf="!arrayActivitiesClient.includes(item.activity_name)" type="STROKED"
-                                        label="{{ item.activity_name }}" layout-padding color="accent"
-                                        (onClick)="addActivityFn(item.activity_name,item.id_activity)"></o-button>
-
+                    <!-- Columna Derecha: Datos + actividades -->
+                    <o-column fxFlex="65" fxFlex.md="100" class="vertical-margin-10">    
+                        <o-column class="profile-data" title="PROFILE_DATA" layout-align="start stretch" fxFlex="95" icon="person_pin">
+                            <o-row class="data-container">
+                                <o-text-input attr="id_client" oHidden></o-text-input>
+                                <o-text-input attr="name" label="NAME" fxFlex="50" required="yes" max-length="20" width="160px" class="form-field">
+                                </o-text-input>
+                                <o-text-input attr="surname" label="SURNAME" fxFlex="50" required="yes"
+                                    max-length="30" width="160px" class="form-field"></o-text-input>
+                            </o-row>
+                            <o-row class="shortDesc-container">
+                                <o-textarea-input attr="short_desc" label="SHORTDESC"
+                                placeholder="{{ 'SHORDESC' | oTranslate }}" fxFlex="100" max-length="100"></o-textarea-input>
+                            </o-row>
+                        </o-column>
+                
+                        <!-- Actividades --> 
+                        <o-column class="activities-data" title="ACTIVITIES" layout-align="start stretch" fxFlex="95" icon="favorite">
+                            <mat-chip-list fxFlex="100">
+                                <mat-chip class="activitiesChip" *ngFor="let activity of arrayActivitiesClient"
+                                    [disabled]="false" color="primary">
+                                    {{ activity }}
+                                </mat-chip>
+                            </mat-chip-list>
+                            <!-- Desplegable actividades -->
+                            <o-column-collapsible class="actselect" title="ACTSELECT" layout-align="start stretch" fxFlex="100" expanded="no">
+                                <o-grid class="activitiesGrid" #activitiesB attr="activitiesB" service="activities"
+                                    entity="activity" keys="id_activity" columns="activity_name;id_activity" orderable="true"
+                                    show-page-size="no" quick-filter="false" cols="8" sortable-columns="activity_name"
+                                    gutter-size="5px" detail-mode="none" (onDataLoaded)="onLoad()" pagination-controls="false"
+                                    controls="false" show-footer="no">
+                                    <!-- Grid seleccionar actividades -->
+                                    <o-grid-item *ngFor="let item of activitiesB.dataArray" show-page-size="false">
+                                        <div fxLayout="column" fxLayoutAlign="space-evenly center">
+                                            <o-button class="activitiesButton"
+                                                *ngIf="arrayActivitiesClient.includes(item.activity_name)" type="STROKED"
+                                                label="{{ item.activity_name }}" layout-padding color="primary"
+                                                (onClick)="removeActivityFn(item.activity_name,item.id_activity)"></o-button>
+                                            <o-button class="activitiesButton"
+                                                *ngIf="!arrayActivitiesClient.includes(item.activity_name)" type="STROKED"
+                                                label="{{ item.activity_name }}" layout-padding color="accent"
+                                                (onClick)="addActivityFn(item.activity_name,item.id_activity)"></o-button>
+                                        </div>
+                                    </o-grid-item>
+                                </o-grid>
+                                <!-- Botón guardar actividades -->
+                                <div fxLayout="column" fxLayoutAlign="space-evenly center" fxFlex="100">
+                                    <o-button type="RAISED" label="SAVEACT" layout-padding color="accent"
+                                        (onClick)="saveActivitiesInDataBase($event)"></o-button>
                                 </div>
+                            </o-column-collapsible>
+                        </o-column>
 
-                            </o-grid-item>
-                        </o-grid>
-                        <div fxLayout="column" fxLayoutAlign="space-evenly center" fxFlex="100">
-                            <o-button type="RAISED" label="SAVEACT" layout-padding color="accent"
-                                (onClick)="saveActivitiesInDataBase($event)"></o-button>
-                        </div>
-                    </o-column-collapsible>
-                </o-column>
-
-                <o-column title="REGISTER_DATA" layout-align="start stretch" fxFlex="80" icon="assignment">
-                    <o-text-input attr="user_" label="USER" fxFlex="80" enabled="no"></o-text-input>
-                    <o-row class="row-pass">
-                        <o-password-input attr="password" fxFlex="80" required="yes" label="PASSWORD"
-                            show-password-button="yes" [validators]="validatorsArray" (input)="onPasswordInput()">
-                            <!-- Campo de entrada de contraseña -->
-                            <o-validator [error-name]="'passwordNotSize'" [error-text]="'ERROR_PASS'"></o-validator>
-                            <!-- Validador para el tamaño de la contraseña -->
-                        </o-password-input>
-                    </o-row>
-                    <o-row class="row-pass">
-                        <o-password-input attr="passwordConfirm" fxFlex="80" *ngIf="isPasswordModified"
-                            label="{{ 'Confirm password' | oTranslate }}" show-password-button="yes"
-                            [validators]="validatorsArray">
-                            <!-- Campo de entrada de confirmación de contraseña -->
-                            <o-validator [error-name]="'passwordNotMatched'" [error-text]="'ERROR_MATCH'"></o-validator>
-                            <!-- Validador para comprobar que las contraseñas coinciden -->
-                        </o-password-input>
-                    </o-row>
-                </o-column>
+                    </o-column>    
+                </div>
+            </o-column>
 
             </o-form>
         </mat-tab>
@@ -104,14 +122,11 @@
                     <o-slide-toggle attr="host" label="ACTIVEHOST" (onChange)="toggleHost($event)"
                         fxFlex="80"></o-slide-toggle>
                 </o-column>
-
             </o-form>
         </mat-tab>
 
         <!-- Pestaña para gestionar reservas-->
-
         <mat-tab label="{{ 'RESERVATION_TAB' | oTranslate }}">
-
             <p class="title">{{ 'RECB_RESERVATION' | oTranslate }}</p>
             <div class="container">
                 <o-grid #gridReservationReceived attr="reservationReceived" service="users" entity="reservationReceived"
